문법적으로 틀린 내용들 고침